frontproxy/frontproxy-envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      require_tls: ALL
                      routes:
                        - match:
                            prefix: "/service1"
                          route:
                            cluster: local_service1
                        - match:
                            prefix: "/invokeService2"
                          route:
                            cluster: local_service1
                        - match:
                            prefix: "/service2"
                          route:
                            cluster: local_service2
                        - match:
                            prefix: "/invokeService1"
                          route:
                            cluster: local_service2
                http_filters:
                  - name: envoy.router
                    typed_config: {}
          tls_context:
            common_tls_context:
              tls_certificate_sds_secret_configs:
                name: server-cert-and-key
                sds_config:
                  path: /opt/envoy-secret.yaml

  clusters:
    - name: local_service1
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
            name: server-cert-and-key
            sds_config:
              path: /opt/envoy-secret.yaml
      load_assignment:
        cluster_name: local_service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service1
                      port_value: 444
    - name: local_service2
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
            name: server-cert-and-key
            sds_config:
              path: /opt/envoy-secret.yaml
      load_assignment:
        cluster_name: local_service2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service2
                      port_value: 445

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
